# Real_state_ML

./: .gitignore  README.md  main.py  pyproject.toml
LLM/: app.py  llm.py  utils.py
models/: XGBoost.ipynb  Xgboost_kmeans.ipynb  tree copy.ipynb  tree.ipynb
notebooks/: Eda.ipynb  feature_engineer.ipynb  llm_preparation.ipynb  llm_test.ipynb
